--- a/fr/index.html
+++ b/fr/index.html
@@ -9,26 +9,26 @@ title: Cyril MOINEAU
 		</div>
 			<h2>Qui suis je ?</h2>
 			<p>
-				Je suis un élève ingénieur en informatique français née en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solution.
+				Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solution.
 				</br>
-				De part ma formation d'ingénieur, je veux travailler plutôt en entreprisé et m'orienter vers de la recherche appliqué.
+				De part ma formation d'ingénieur, je voudrais travailler en entreprise et m'orienter vers de la recherche appliquée.
 				</br>
-				Je suis passioné par l'apprentissage automtique et l'exploration de donnée. Mais je suis aussi interresé par la physique et je suis curieux.			
+				Je suis passioné par l'apprentissage automatique et l'exploration de données. Mais je suis aussi interresé par la physique et je suis curieux.			
 			</p>
 
 			<h2>Actuellement</h2>
 			<p>
 
-				J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur Française. 
+				J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
 				Parallèlement, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
 			</p>
 
-			<h2>Listes des cours que j'ai suivis dans ma scolarité :</h2>
+			<h2>Listes des cours que j'ai suivi dans ma scolarité :</h2>
 			<p>
 			<h3>M2SIF Rennes 1 (2019-2020)</h3>
 					<ul>
-						<li>Fouille de donnée massive et visualisation</li>
-						<li>Analyse de donnée et modélisation probabilistique</li>
+						<li>Fouille de données massives et visualisation</li>
+						<li>Analyse de données et modélisation probabilistique</li>
 						<li>Rédaction d'article scientifique</li>
 					</ul>
 
@@ -39,8 +39,8 @@ title: Cyril MOINEAU
 								<li>Logique Mathématiques</li>
 								<li>Analyse</li>
 								<li>Algébre</li>
-								<li>Analyse discréte en continue</li>
-								<li>Probabilité</li>
+								<li>Analyse discrète et continue</li>
+								<li>Probabilités</li>
 								<li>Statistiques</li>
 								<li>Theorie des files d'attente</li>
 								<li>Cryptographie</li>
@@ -52,51 +52,51 @@ title: Cyril MOINEAU
 								<li>Bases de C</li>
 								<li>Bases de Java</li>
 								<li>Algorithmique</li>
-								<li>Structure de donnée</li>
+								<li>Structure de données</li>
 								<li>Programmation objet</li>
 								<li>Génie logiciel</li>
 								<li>Temps réel</li>
-								<li>Algorithme distribué</li>
+								<li>Algorithmes distribués</li>
 								<li>Programmation Unix</li>
-								<li>Base de donnée relationel</li>
-								<li>Base de donnée avancé (logique floue)</li>
+								<li>Bases de données relationelles</li>
+								<li>Bases de données avancées (logique floue)</li>
 								<li>Théorie des langages et compilation</li>
 								<li>Calculabilité</li>
 								<li>Programmation web Client / Serveur</li>
 								<li>Services Web</li>
 								<li>Securité des systèmes logiciel</li>
-								<li>Porgrammation déclarative et fonctionnel</li>
+								<li>Porgrammation déclarative et fonctionnelle</li>
 								<li>Apprentissage Automatique</li>
 								<li>Web Data Management</li>
-								<li>Analyse et fouille de donnée massive</li>
+								<li>Analyse et fouille de données massives</li>
 								<li>Traitement automatique du langage et de la parole</li>
 							</ul>
 						<li><strong>Electronique :</strong>
 							<ul>
 								<li>Micro-controleurs</li>
-								<li>Bases des systèmes  numérique</li>
+								<li>Bases des systèmes  numériques</li>
 							</ul>
 					</ul>
 
 					<h3>Classes préparatoire (2015-2017)</h3>
 					<p>
-						J'ai étudié dans une classe préparatoire français de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
+						J'ai étudié dans une classe préparatoire française de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
 					</p>
 					<ul>
 						<li><strong>Mathematiques :</strong></li>
 							<ul>
 								<li>Algèbre linéaire</li>
-								<li>Espace vecotriel normée en dimension finis</li>
+								<li>Espace vecotriel normé en dimensions finis</li>
 								<li>Espace Euclidien</li>
-								<li>Fonction vectorielles et arcs paramétrés</li>
-								<li>Probabilité</li>
+								<li>Fonctions vectorielles et arcs paramétrés</li>
+								<li>Probabilités</li>
 								<li>Calcul différentiel</li>
 							</ul>
 						<li><strong>Physique :</strong></li>
 							<ul>
 								<li>Optique non linéaire</li>
 								<li>Éléctromagnetisme</li>
-								<li>Méchanique</li>
+								<li>Mécanique</li>
 								<li>Thermodynamique</li>
 								<li>Physique des ondes</li>
 							</ul>
@@ -110,7 +110,7 @@ title: Cyril MOINEAU
 						<li><strong>Informatique :</strong></li>
 							<ul>
 								<li>Introduction à Python</li>
-								<li>Introduction aux base de donnée (mySQL)</li>
+								<li>Introduction aux bases de données (mySQL)</li>
 								<li>Modélisation physique</li>
 								<li>Programation récursive</li>
 							</ul>
