--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -3,43 +3,43 @@ layout: french
 title: Cyril MOINEAU
 ---
 	<div class="blurb">
-		<h1>Mon expérience professionel</h1>
+		<h1>Mon expérience professionelle</h1>
 		<h2>Sommaire :</h2>
 		<ul>
 			<li><a href="#NCTU">Stage à la NCTU 2019</a></li>
     		<li><a href="#Metropole">Orléans Métropole 2018</a></li>
     	</ul>
     	<h2 id="NCTU">Stage à la NCTU 2019</h2>
-    		<h3>Description of the internship :</h3>
+    		<h3>Description du stage :</h3>
     		<p>
     			Pendant l'été 2019, j'ai passé 2 mois à la <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) dans le laboratoire <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC).
     		</p>
 
     		<p>
-    			Tout au long de ses 2 mois, j'ai travaillé sur la detection d'emotion en utilisant les signaux ECG (Electrocardiogram) et PPG (Photoplethysmogram). Pour cela, j'ai utilisé un CNN (Réseaux de neuronnes par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler dur des problèmatiques tel que la detection de pic et l'iplémentation d'un système temps réel. En effet, l'objectif finale du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a> de NVIDIA. 
+    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (Electrocardiogram) et PPG (Photoplethysmogram). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a> de NVIDIA. 
     		</p>
     		<p>
-    			A la suite de mon stage, on m'a proposé d'écrire un article pour la conférence <a href="https://www.iscas2020.org/">ISCAS</a>. Je suis en pleine rédaction de l'article.
+    			A la suite de mon stage, on m'a proposé d'écrire un article pour la conférence <a href="https://www.iscas2020.org/">ISCAS</a>. Je suis en pleine rédaction de cet article.
     		</p>
 
     		<h3>Conclusion :</h3>
     		<p>
-    			Ce stage à été une très bonne première expérience dans le monde de la recherche. Je ne pourrais pas remercier suffisament les personnes qui m'ont accueillis à la NCTU et qui m'ont permis de passer deux mois très bénéfique. J'ai pu comprendre les difficultés de travailler dans un laboratoire de recherche. Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais désireux d'apprendre. Ces deux mois ont confirmé mon désire de faire de la recherche.
+    			Ce stage a été une très bonne première expérience dans le monde de la recherche. Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permi de passer deux mois très bénéfiques. J'ai pu comprendre les difficultés de travailler dans un laboratoire de recherche. Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais désireux d'apprendre. Ces deux mois ont confirmé mon désir de faire de la recherche.
     		</p>
 
 
     	<h2 id="Metropole">Orléans Métropole 2018</h2>
-    	    <h3>Déscription d stage :</h3>
+    	    <h3>Description du stage :</h3>
     		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur deux sujets différents.
     		</p>
     		<p>
-    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque membre de la métropole. Dans ce contexte, la DSI d'Orléans à décidé de mettre à jour leurs système de supervision. Pedndant mon stage j'ai pu obeserver un vrai réseaux et apprendre de nouvelles choses sur les réseaux et la virtualisation.
+    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque membre de la métropole. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour leurs systèmes de supervision. Pendant mon stage, j'ai pu observer un vrai réseaux et apprendre de nouvelles choses sur les réseaux et la virtualisation.
     		</p>
 			<p>
-    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateur qui n'avaient pas été supprimé. Ce projet était très interressant puisque je devais trouver un faisceaux d'indice me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai utilisé des scripts Power Shell.
+    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateur qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceaux d'indice me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai utilisé des scripts Power Shell.
     		</p>
     		<h3>Conclusion :</h3>
     		<p>
-    			C'était mon premier stage technique. J'ai pu apprendre beaucoups et l'ont m'a donné plusieurs responsabilité. Plus particulièrement pour le nettoyage de l'AD, où supprimer un utilisateur qui travail encore serait dommageable pour le bon fonctionnement de la métropole.  
+    			C'était mon premier stage technique. J'ai pu apprendre beaucoup et l'on m'a donné plusieurs responsabilités. Plus particulièrement pour le nettoyage de l'AD, où supprimer un utilisateur qui travaille encore serait dommageable pour le bon fonctionnement de la métropole.  
     		</p>
 	</div><!-- /.blurb -->
