--- a/project/fr/index.html
+++ b/project/fr/index.html
@@ -12,13 +12,13 @@ title: Cyril MOINEAU
 
     	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
-    			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai pu travailler sur deux projets avec la même équipes d'étudiant. Ces projets s'orientait tous deux vers l'organisation d'un concours de programmation. Plus bas, vous trouverez une description de chaque projet suivis par une partie sur ma contribution.
+    			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai pu travailler sur deux projets avec la même équipe d'étudiants. Ces projets s'orientaient tous deux vers l'organisation d'un concours de programmation. Plus bas, vous trouverez une description de chaque projet suivie par une partie sur ma contribution.
     		</p>
 
 	    	<h3>Description du projet Ada Lovelace :</h3>
 	    		<p>
-	    			<a href="https://adalovelace.ledantec-numerique.fr/">Le challenge Ada Lovelace</a> est un challenge informatique au cours du quel, des lycéennes en groupe de 4-5 doivent créer un site web en rapport avec une problèmatique.
-	    			Ce projet à pour but de promouvoir la place de la femme dans le monde du numérique, qui est pour l'instant sureprésenté par les hommes comme le montre ces statistiques :
+	    			<a href="https://adalovelace.ledantec-numerique.fr/">Le challenge Ada Lovelace</a> est un challenge informatique au cours duquel, des lycéennes en groupe de 4-5 doivent créer un site web pour répondre à une problèmatique.
+	    			Ce projet a pour but de promouvoir la place de la femme dans le monde du numérique, qui est pour l'instant sureprésenté par les hommes comme le montre ces statistiques :
 	    		</p>
 
 	    		<figure>
@@ -31,28 +31,28 @@ title: Cyril MOINEAU
 					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidés de créer cet évènement pour rentrer en contact avec ces jeunes lycéennes et leurs donner un premier apperçu du monde du numérique positif. 
 				</p>
 				<p>
-					Pour aider les lycéennes, elles sont encadrées par des étudiantes qui sont en étude supérieur. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les monitrices leurs donne un exemple du femme qui travaillent dans le monde du numérique pour briser les stéréotypes.
+					Pour aider les lycéennes, elles sont encadrées par des étudiantes qui sont en étude supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes qui travaillent dans le monde du numérique pour briser les stéréotypes.
 				</p>
 
 			<h3>Description du projet Hackathon de l'ENSSAT :</h3>
 
 			<p>
-				Le projet Hackathon de l'ENSSAT est une compétition de programation ouvert aux étudiants. Pendant l'évènement, les participants devaient proposer une solution à un problème autour d'une thématique imposé. Tout cela en un temps limité de 24 heures.Ils sont pour cela en équipe de 5 et doivent faire une présentation à la fin des 24 heures pour présenter leurs solutions. Les étudiants sont évalué par un jury de professionel venant d'un milieu idustriel et de laboratoire. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettants dans des conditions difficiles (seulement 24 heures !).
+				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution à un problème autour d'une thématique imposée. Tout cela en un temps limité de 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures . Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (seulement 24 heures !).
 			</p>
 
 
 	    	<h3>Ma contribution à ses deux projets :</h3>
 
 	    		<p>
-	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donnés l'occasion de participer à la vie étudiante. J'ai été cooridnateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoups d'acteur, mon travail à été de les coordoner de manière à créer un challenge interressant et convivial pour les étudiants.
+	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donnés l'occasion de participer à la vie étudiante. J'ai été cooridnateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordoner de manière à créer un challenge interressant et convivial pour les étudiants.
 	    		</p>
 	    		<p>
-	    			Mais pas seulement, j'ai du organiser et aider l'équipe d'étudiant dont je faisait partie. J'ai entre autre participé à la création du budget, à la recherche de sponsor et à l'organisation de la logistique des évènements.
-	    			J'ai ainsi pu travailler sur la communication et les résolutions de conflits.
+	    			Mais pas seulement, j'ai dû organiser et aider l'équipe d'étudiants dont je faisais parti. J'ai entre autre participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
+	    			J'ai ainsi pû travailler sur la communication et les résolutions de conflits.
 	    		</p>
 
 	    		<p>
-	    			Le projet Ada Lovelace etait ma première expérience de projet avec autant de partenaire. Elle fût positive, où j'ai pu travailler et coordoner des gens qui était éloigné les uns des autres.
+	    			Le projet Ada Lovelace était ma première expérience de projet avec autant de partenaires. Elle a été positive, j'ai pu travailler et coordonner des gens qui étaient éloignés les uns des autres.
 	    		</p>
 
 	    	<h3>Liens vers des articles sur le challenge Ada Lovelace :</h3>
@@ -70,13 +70,13 @@ title: Cyril MOINEAU
 
     	<h2 id="BomberBall">Projet BomberBall</h2>
     		<p>
-    			Le projet Bomberball est un projet de Génie Logiciel, c'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
-    			Lors de ce projet, nous avons répondu à une appelle d'offre et avons organisé de nombreuse réunion pour comprendre les besoins du client. L'appelle d'offre décrivait un jeu similaire au jeu Bomber Man. Nous aovns codé ce jeu en Java car c'était le langage que nous maîtrisons le plus en 2ème année.
+    			Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
+    			Lors de ce projet, nous avons répondu à une appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client. L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. Nous avons codé ce jeu en Java car c'était le langage que nous maîtrisions le plus en 2ème année.
     		</p>
     		
     		<h3>Le résultat :</h3>
     			<p>Vous pouvez voir le repository git en cliquant <a href="https://github.com/cmoineau/GL-BomberBall">ici</a>.
-    			Vous pouvez regarder une vidéo de présentation que nous avons réaliser pour présenter notre jeu lors de la présentation finale : 
+    			Vous pouvez regarder une vidéo de présentation que nous avons réalisée pour présenter notre jeu lors de la présentation finale : 
 
     			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/0CLnEmHGonU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     			</p>
