--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Cyril MOINEAU
 
 			<h2>Currently</h2>
 			<p>
-				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineer school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>.
+				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>.
 			</p>
 
 			<h2>Courses taken</h2>
