--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -16,7 +16,7 @@ title: Cyril MOINEAU
     		</p>
 
     		<p>
-    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (Electrocardiogram) et PPG (Photoplethysmogram). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a> de NVIDIA. 
+    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a> de NVIDIA. 
     		</p>
     		<p>
     			A la suite de mon stage, on m'a proposé d'écrire un article pour la conférence <a href="https://www.iscas2020.org/">ISCAS</a>. Je suis en pleine rédaction de cet article.
@@ -24,7 +24,7 @@ title: Cyril MOINEAU
 
     		<h3>Conclusion :</h3>
     		<p>
-    			Ce stage a été une très bonne première expérience dans le monde de la recherche. Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permi de passer deux mois très bénéfiques. J'ai pu comprendre les difficultés de travailler dans un laboratoire de recherche. Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais désireux d'apprendre. Ces deux mois ont confirmé mon désir de faire de la recherche.
+    			Ce stage a été riche et une très bonne expérience dans le monde de la recherche. Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permi de passer deux mois très bénéfiques. J'ai pu comprendre les difficultés de travailler dans un laboratoire de recherche. Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais avide d'apprendre et d'appréhender ce sujet. Ces deux mois ont confirmé mon désir de faire de la recherche.
     		</p>
 
 
