Correcting grammar mistake.

--- a/fr/index.html
+++ b/fr/index.html
@@ -9,9 +9,9 @@ title: Cyril MOINEAU
 		</div>
 			<h2>Qui suis je ?</h2>
 			<p>
-				Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solution.
+				Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solutions.
 				</br>
-				De part ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionels.
+				De par ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionels.
 				</br>
 				Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interresé par la physique et je suis curieux.			
 			</p>
@@ -20,7 +20,7 @@ title: Cyril MOINEAU
 			<p>
 
 				J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
-				En parallèle à cette scolarité, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
+				En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
 			</p>
 
 			<h2>Listes des cours que j'ai suivi dans ma scolarité :</h2>
