--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -16,7 +16,7 @@ title: Cyril MOINEAU
     		</p>
 
     		<p>
-    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a> de NVIDIA. 
+    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano</a> de NVIDIA. 
     		</p>
     		<p>
     			A la suite de mon stage, on m'a proposé d'écrire un article pour la conférence <a href="https://www.iscas2020.org/">ISCAS</a>. Je suis en pleine rédaction de cet article.
@@ -30,16 +30,16 @@ title: Cyril MOINEAU
 
     	<h2 id="Metropole">Orléans Métropole 2018</h2>
     	    <h3>Description du stage :</h3>
-    		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur deux sujets différents.
+    		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur les deux sujets suivants.
     		</p>
     		<p>
-    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque membre de la métropole. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour leurs systèmes de supervision. Pendant mon stage, j'ai pu observer un vrai réseaux et apprendre de nouvelles choses sur les réseaux et la virtualisation.
+    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque commune. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour son système de supervision. Pendant mon stage, j'ai pu observer un vrai réseaux et développer mes connaissances sur les réseaux et la virtualisation.
     		</p>
 			<p>
-    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateur qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceaux d'indice me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai utilisé des scripts Power Shell.
+    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceaux d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.
     		</p>
     		<h3>Conclusion :</h3>
     		<p>
-    			C'était mon premier stage technique. J'ai pu apprendre beaucoup et l'on m'a donné plusieurs responsabilités. Plus particulièrement pour le nettoyage de l'AD, où supprimer un utilisateur qui travaille encore serait dommageable pour le bon fonctionnement de la métropole.  
+    			C'était mon premier stage technique. J'ai découvert beaucoup dans la gestion de réseau. On m'a par ailleurs donné de nombreuses responsabilités, notamment lors du nettoyage de l'AD. Effectivemen la suppression d'un utilisateur actif aurait été pénalisant et ce type d'erreur aurait donné une mauvaise image du service.  
     		</p>
 	</div><!-- /.blurb -->
