--- a/internship/index.html
+++ b/internship/index.html
@@ -12,7 +12,7 @@ title: Cyril MOINEAU
     	<h2 id="NCTU">Internship at the NCTU 2019</h2>
     		<h3>Description of the internship :</h3>
     		<p>
-    			During the summer of 2019, I spend 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
+    			During summer 2019, I spent 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
     		</p>
 
     		<p>
@@ -24,22 +24,22 @@ title: Cyril MOINEAU
 
     		<h3>Conclusion :</h3>
     		<p>
-    			This internship was a very good first experience of the world of research. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties of working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
+    			This internship was a very good first experience of the world of research. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
     		</p>
 
 
     	<h2 id="Metropole">Orléans Métropole 2018</h2>
     	    <h3>Description of the internship :</h3>
-    		<p>I spend 2 months during the summer 2018 at the <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a> at the Information Systems Division (ISD). During this summer, I worked on two different topics.
+    		<p>I spend 2 months during summer 2018 at the <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a> at the Information Systems Division (ISD). This summer, I worked on two different topics.
     		</p>
     		<p>
     			1. Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
     		</p>
 			<p>
-    			2. Management of the Active Directory (AD). The AD has a lot of users who were supposed to be gone. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
+    			2. Management of the Active Directory (AD). The AD of the metropole had a lot of users who were supposed to be gone. My work was to found these users and to remove them. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
     		</p>
     		<h3>Conclusion :</h3>
     		<p>
-    			This was my first technical internship. I learned a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
+    			This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
     		</p>
 	</div><!-- /.blurb -->
