--- a/project/index.html
+++ b/project/index.html
@@ -17,7 +17,7 @@ title: Cyril MOINEAU
 
 	    	<h3>Description of the project Ada Lovelace :</h3>
 	    		<p>
-	    			<a href="https://adalovelace.ledantec-numerique.fr/">The Ada Lovelace challenge</a> is a computer science challenge in which highschool girls have to create a web site about a topic in a group of 4-5.
+	    			<a href="https://adalovelace.ledantec-numerique.fr/">The Ada Lovelace challenge</a> is a computer science challenge in which high-school girls have to create a web site about a topic in a group of 4-5.
 	    			This project aims at promoting the place of women in the numeric world, which mostly represented by men as shown by statistics :
 	    		</p>
 
@@ -68,7 +68,7 @@ title: Cyril MOINEAU
 
     	<h2 id="BomberBall">Projet BomberBall</h2>
     		<p>
-    			Bomber Ball project was an important project for software engineering courses. During this project, we were role playing a company and the professors were playing the client. 
+    			Bomber Ball project was an important project for software engineering course. During this project, we were role playing a company and the professors were playing the client. 
     			During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand. The company wanted to create a video game similar to the Bomber Man. We had to code the game in Java since it was the language we used the most in junior year at ENSSAT.
     		</p>
     		
