--- a/project/fr/index.html
+++ b/project/fr/index.html
@@ -12,7 +12,7 @@ title: Cyril MOINEAU
 
     	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
-    			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai pu travailler sur deux projets avec la même équipe d'étudiants. Ces projets s'orientaient tous deux vers l'organisation d'un concours de programmation. Plus bas, vous trouverez une description de chaque projet suivie par une partie sur ma contribution.
+    			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai travaillé sur deux projets avec la même équipe d'étudiants. Ces projets s'orientaient tous deux vers l'organisation d'un concours de programmation. Vous trouverez ci-dessous une description de chaque projet, ainsi que ma contribution.
     		</p>
 
 	    	<h3>Description du projet Ada Lovelace :</h3>
@@ -28,31 +28,31 @@ title: Cyril MOINEAU
 
 				<p>
 					Seulement 1/3 des élèves ingénieur sont des femmes, comme on peut le voir sur la première ligne.
-					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidés de créer cet évènement pour rentrer en contact avec ces jeunes lycéennes et leurs donner un premier apperçu du monde du numérique positif. 
+					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidés de créer cet évènement pour rentrer en contact avec les jeunes lycéennes et leurs donner un premier aperçu du monde du numérique positif. 
 				</p>
 				<p>
-					Pour aider les lycéennes, elles sont encadrées par des étudiantes qui sont en étude supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes qui travaillent dans le monde du numérique pour briser les stéréotypes.
+					Les lycéennes sont encadrées par des étudiantes qui sont en études supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes qui travaillent dans le monde du numérique pour briser les stéréotypes.
 				</p>
 
 			<h3>Description du projet Hackathon de l'ENSSAT :</h3>
 
 			<p>
-				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution à un problème autour d'une thématique imposée. Tout cela en un temps limité de 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures . Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (seulement 24 heures !).
+				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution informatique à un problème autour d'une thématique imposée. Tout cela en un temps limité à 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures . Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (limité à 24 heures !).
 			</p>
 
 
 	    	<h3>Ma contribution à ses deux projets :</h3>
 
 	    		<p>
-	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donnés l'occasion de participer à la vie étudiante. J'ai été cooridnateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordoner de manière à créer un challenge interressant et convivial pour les étudiants.
+	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donnés l'occasion de participer à la vie étudiante. J'ai été coordinateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordoner de manière à créer un challenge intéressant et convivial pour les étudiants.
 	    		</p>
 	    		<p>
-	    			Mais pas seulement, j'ai dû organiser et aider l'équipe d'étudiants dont je faisais parti. J'ai entre autre participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
+	    			J'ai également dû organiser et aider l'équipe d'étudiants dont je faisais parti. J'ai entre autre participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
 	    			J'ai ainsi pû travailler sur la communication et les résolutions de conflits.
 	    		</p>
 
 	    		<p>
-	    			Le projet Ada Lovelace était ma première expérience de projet avec autant de partenaires. Elle a été positive, j'ai pu travailler et coordonner des gens qui étaient éloignés les uns des autres.
+	    			Le projet Ada Lovelace était ma première expérience de projet avec autant de partenaires. Elle a été positive, j'ai pu travailler et coordonner des personnes issues d'univers différents.
 	    		</p>
 
 	    	<h3>Liens vers des articles sur le challenge Ada Lovelace :</h3>
