Modification on the french version.

--- a/fr/index.html
+++ b/fr/index.html
@@ -11,9 +11,9 @@ title: Cyril MOINEAU
 			<p>
 				Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solutions.
 				</br>
-				De par ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionels.
+				De par ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionnels.
 				</br>
-				Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interresé par la physique et je suis curieux.			
+				Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interressé par la physique et je suis curieux.			
 			</p>
 
 			<h2>Actuellement</h2>
@@ -34,15 +34,15 @@ title: Cyril MOINEAU
 
 				<h3>ENSSAT (2017-2020)</h3>
 					<ul>
-						<li><strong>Mathematiques :</strong>
+						<li><strong>Mathématiques :</strong>
 							<ul>
 								<li>Logique Mathématiques</li>
 								<li>Analyse</li>
-								<li>Algébre</li>
+								<li>Algèbre</li>
 								<li>Analyse discrète et continue</li>
 								<li>Probabilités</li>
 								<li>Statistiques</li>
-								<li>Theorie des files d'attente</li>
+								<li>Théorie des files d'attente</li>
 								<li>Cryptographie</li>
 							</ul>
 						<li><strong>Informatique :</strong>
@@ -58,13 +58,13 @@ title: Cyril MOINEAU
 								<li>Temps réel</li>
 								<li>Algorithmes distribués</li>
 								<li>Programmation Unix</li>
-								<li>Bases de données relationelles</li>
+								<li>Bases de données relationnelles</li>
 								<li>Bases de données avancées (logique floue)</li>
 								<li>Théorie des langages et compilation</li>
 								<li>Calculabilité</li>
 								<li>Programmation web Client / Serveur</li>
 								<li>Services Web</li>
-								<li>Securité des systèmes logiciel</li>
+								<li>Sécurité des systèmes logiciel</li>
 								<li>Porgrammation déclarative et fonctionnelle</li>
 								<li>Apprentissage Automatique</li>
 								<li>Web Data Management</li>
@@ -73,12 +73,12 @@ title: Cyril MOINEAU
 							</ul>
 						<li><strong>Electronique :</strong>
 							<ul>
-								<li>Micro-controleurs</li>
+								<li>Micro-contrôleurs</li>
 								<li>Bases des systèmes  numériques</li>
 							</ul>
 					</ul>
 
-					<h3>Classes préparatoire (2015-2017)</h3>
+					<h3>Classe préparatoire (2015-2017)</h3>
 					<p>
 						J'ai étudié dans une classe préparatoire française de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
 					</p>
@@ -86,7 +86,7 @@ title: Cyril MOINEAU
 						<li><strong>Mathematiques :</strong></li>
 							<ul>
 								<li>Algèbre linéaire</li>
-								<li>Espace vecotriel normé en dimensions finis</li>
+								<li>Espace vectoriel normé en dimensions finies</li>
 								<li>Espace Euclidien</li>
 								<li>Fonctions vectorielles et arcs paramétrés</li>
 								<li>Probabilités</li>
@@ -95,7 +95,7 @@ title: Cyril MOINEAU
 						<li><strong>Physique :</strong></li>
 							<ul>
 								<li>Optique non linéaire</li>
-								<li>Éléctromagnetisme</li>
+								<li>Électromagnétisme</li>
 								<li>Mécanique</li>
 								<li>Thermodynamique</li>
 								<li>Physique des ondes</li>
@@ -112,7 +112,7 @@ title: Cyril MOINEAU
 								<li>Introduction à Python</li>
 								<li>Introduction aux bases de données (mySQL)</li>
 								<li>Modélisation physique</li>
-								<li>Programation récursive</li>
+								<li>Programmation récursive</li>
 							</ul>
 	    		</ul>
 			</p>
