--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -3,7 +3,7 @@ layout: french
 title: Cyril MOINEAU
 ---
 	<div class="blurb">
-		<h1>Mon expérience professionelle</h1>
+		<h1>Mon expérience professionnelle</h1>
 		<h2>Sommaire :</h2>
 		<ul>
 			<li><a href="#NCTU">Stage à la NCTU 2019</a></li>
@@ -36,10 +36,10 @@ title: Cyril MOINEAU
     			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque commune. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour son système de supervision. Pendant mon stage, j'ai pu observer un vrai réseaux et développer mes connaissances sur les réseaux et la virtualisation.
     		</p>
 			<p>
-    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceaux d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.
+    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceau d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.
     		</p>
     		<h3>Conclusion :</h3>
     		<p>
-    			C'était mon premier stage technique. J'ai découvert beaucoup dans la gestion de réseau. On m'a par ailleurs donné de nombreuses responsabilités, notamment lors du nettoyage de l'AD. Effectivemen la suppression d'un utilisateur actif aurait été pénalisant et ce type d'erreur aurait donné une mauvaise image du service.  
+    			C'était mon premier stage technique. J'ai découvert beaucoup dans la gestion de réseau. On m'a par ailleurs donné de nombreuses responsabilités, notamment lors du nettoyage de l'AD. Effectivemment la suppression d'un utilisateur actif aurait été pénalisant et ce type d'erreur aurait donné une mauvaise image du service.  
     		</p>
 	</div><!-- /.blurb -->
