--- a/project/fr/index.html
+++ b/project/fr/index.html
@@ -27,8 +27,8 @@ title: Cyril MOINEAU
 				</figure>
 
 				<p>
-					Seulement 1/3 des élèves ingénieur sont des femmes, comme on peut le voir sur la première ligne.
-					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidés de créer cet évènement pour rentrer en contact avec les jeunes lycéennes et leurs donner un premier aperçu du monde du numérique positif. 
+					Seulement 1/3 des élèves ingénieurs sont des femmes, comme on peut le voir sur la première ligne.
+					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidé de créer cet évènement pour rentrer en contact avec les jeunes lycéennes et leur donner un premier aperçu du monde du numérique positif. 
 				</p>
 				<p>
 					Les lycéennes sont encadrées par des étudiantes qui sont en études supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes qui travaillent dans le monde du numérique pour briser les stéréotypes.
@@ -37,17 +37,17 @@ title: Cyril MOINEAU
 			<h3>Description du projet Hackathon de l'ENSSAT :</h3>
 
 			<p>
-				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution informatique à un problème autour d'une thématique imposée. Tout cela en un temps limité à 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures . Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (limité à 24 heures !).
+				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution informatique à un problème autour d'une thématique imposée. Tout cela en un temps limité à 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures . Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (limitées à 24 heures !).
 			</p>
 
 
 	    	<h3>Ma contribution à ses deux projets :</h3>
 
 	    		<p>
-	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donnés l'occasion de participer à la vie étudiante. J'ai été coordinateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordoner de manière à créer un challenge intéressant et convivial pour les étudiants.
+	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donné l'occasion de participer à la vie étudiante. J'ai été coordinateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordonner de manière à créer un challenge intéressant et convivial pour les étudiants.
 	    		</p>
 	    		<p>
-	    			J'ai également dû organiser et aider l'équipe d'étudiants dont je faisais parti. J'ai entre autre participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
+	    			J'ai également dû organiser et aider l'équipe d'étudiants dont je faisais partie. J'ai entre autre participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
 	    			J'ai ainsi pû travailler sur la communication et les résolutions de conflits.
 	    		</p>
 
@@ -71,7 +71,7 @@ title: Cyril MOINEAU
     	<h2 id="BomberBall">Projet BomberBall</h2>
     		<p>
     			Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
-    			Lors de ce projet, nous avons répondu à une appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client. L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. Nous avons codé ce jeu en Java car c'était le langage que nous maîtrisions le plus en 2ème année.
+    			Lors de ce projet, nous avons répondu à un appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client. L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. Nous avons codé ce jeu en Java car c'était le langage que nous maîtrisions le plus en 2ème année.
     		</p>
     		
     		<h3>Le résultat :</h3>
