Adding responsive design => No more link that supperpose ... Changing the size of the police with the size of the window. Minor change on hte main page.

--- a/fr/index.html
+++ b/fr/index.html
@@ -4,7 +4,7 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<div id="presentation">
-		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 140px; height: 169px; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
+		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
 		<h1>Cyril MOINEAU</h1>
 		</div>
 			<h2>Qui suis je ?</h2>
@@ -21,6 +21,7 @@ title: Cyril MOINEAU
 
 				J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
 				En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
+
 			</p>
 
 			<h2>Listes des cours que j'ai suivi dans ma scolarité :</h2>
@@ -68,7 +69,7 @@ title: Cyril MOINEAU
 								<li>Porgrammation déclarative et fonctionnelle</li>
 								<li>Apprentissage Automatique</li>
 								<li>Web Data Management</li>
-								<li>Analyse et fouille de données massives</li>
+								<li>Analyse et fouille de données massives (web sémantique)</li>
 								<li>Traitement automatique du langage et de la parole</li>
 							</ul>
 						<li><strong>Electronique :</strong>
