--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<div id="presentation">
-		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 140px; height: 169px; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
+		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
 		<h1>Cyril MOINEAU</h1>
 		</div>
 			<h2>Who am I ?</h2>
@@ -66,7 +66,7 @@ title: Cyril MOINEAU
 								<li>Declarative and functionnal programming</li>
 								<li>Machine learning</li>
 								<li>Web Data Management</li>
-								<li>Massive data mining and analysis</li>
+								<li>Massive data mining and analysis (semantic web)</li>
 								<li>Automatic processing of languages and speech</li>
 							</ul>
 						<li><strong>Electronics :</strong>
