--- a/internship/index.html
+++ b/internship/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Cyril MOINEAU
 ---
 	<div class="blurb">
-		<h1>My work experience</h1>
+		<h1>My work experiences</h1>
 		<h2>Summary :</h2>
 		<ul>
 			<li><a href="#NCTU">Internship at the NCTU 2019</a></li>
