Changing the color theme. Changing small ortographic mistakes

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ title: Cyril MOINEAU
 							</ul>
 						<li><strong>Computer science :</strong>
 							<ul>
-								<li>Network</li>
+								<li>Networking</li>
 								<li>Operating System</li>
 								<li>Basis of C</li>
 								<li>Basis of Java</li>
 								<li>Algorithmics</li>
 								<li>Data structure</li>
-								<li>Object Programing</li>
+								<li>Oriented Object Programing</li>
 								<li>Software engineering</li>
 								<li>Real time</li>
 								<li>Distributed algorithms</li>
@@ -66,7 +66,7 @@ title: Cyril MOINEAU
 								<li>Declarative and functionnal programming</li>
 								<li>Machine learning</li>
 								<li>Web Data Management</li>
-								<li>Massive data mining and analysis (semantic web)</li>
+								<li>Big data mining and analysis (semantic web)</li>
 								<li>Automatic processing of languages and speech</li>
 							</ul>
 						<li><strong>Electronics :</strong>
@@ -78,7 +78,7 @@ title: Cyril MOINEAU
 
 					<h3>Preparatory classes (2015-2017)</h3>
 					<p>
-						I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a>(in French).
+						I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a> (in French).
 					</p>
 					<ul>
 						<li><strong>Mathematics :</strong></li>
